2011-01-25  Sam Weinig  <sam@webkit.org>

        Reviewed by David Hyatt.

        Scrollbars don't work correctly for top-to-bottom text in an overflow: scroll area
        https://bugs.webkit.org/show_bug.cgi?id=53048

        * fast/overflow/overflow-rtl-vertical-origin-expected.txt: Added.
        * fast/overflow/overflow-rtl-vertical-origin.html: Added.

2011-01-25  Kent Tamura  <tkent@chromium.org>

        Unreviewed, test expectation update.

        * platform/chromium-win/fast/forms/input-appearance-spinbutton-disabled-readonly-expected.checksum: Added.
        * platform/chromium-win/fast/forms/input-appearance-spinbutton-disabled-readonly-expected.png: Added.
        * platform/chromium-win/fast/forms/input-appearance-spinbutton-disabled-readonly-expected.txt: Added.
        * platform/chromium-win/fast/speech/input-appearance-numberandspeech-expected.checksum:
        * platform/chromium-win/fast/speech/input-appearance-numberandspeech-expected.png:
        * platform/chromium-win/fast/speech/input-appearance-numberandspeech-expected.txt:
        * platform/chromium/test_expectations.txt:

2011-01-25  Kent Tamura  <tkent@chromium.org>

        Reviewed by Dimitri Glazkov.

        Radio button group state is not restored correctly
        https://bugs.webkit.org/show_bug.cgi?id=50442

        * fast/forms/state-restore-radio-group-expected.txt: Added.
        * fast/forms/state-restore-radio-group.html: Added.

2011-01-25  Kent Tamura  <tkent@chromium.org>

        Reviewed by Dimitri Glazkov.

        HTMLFormElement::checkValidity() returns incorrect result if 'invalid' events are canceled.
        https://bugs.webkit.org/show_bug.cgi?id=52565

        Fix tests and results for the behavior change.

        * fast/forms/checkValidity-cancel-expected.txt:
        * fast/forms/checkValidity-handler-updates-dom-expected.txt:
        * fast/forms/interactive-validation-cancel-expected.txt:
        * fast/forms/interactive-validation-cancel.html: