@@ -15,9 +15,16 @@
             layoutTestController.dumpAsText();
 
         var t = document.getElementById("test");
-        if (t.scrollTop == 115)
+        var initialTop = t.scrollTop;
+        
+        // Scroll as far as you can.
+        t.scrollTop = 1000;
+        
+        var newTop = t.scrollTop
+        
+        if (initialTop == newTop)
             log("PASS: test.scrollTop is correct.")
         else
-            log("FAIL: test.scrollTop is incorrect. It is " + t.scrollTop + " but should be 115.");
+            log("FAIL: test.scrollTop is incorrect. It is " + initialTop + " but should be " + newTop + ".");
     </script>
 </body>
